--- a/Maquette/GoTrain/Extensions/css/custom.css
+++ b/Maquette/GoTrain/Extensions/css/custom.css
@@ -4,7 +4,11 @@
 }
 
 .bg-dark {
-    background-color: #2c3e50;
+    background-color: #2c3e50 !important;
+}
+
+.bg-second {
+    background-color: #34495e;
 }
 
 .full-height {
