--- a/Maquette/GoTrain/Extensions/css/custom.css
+++ b/Maquette/GoTrain/Extensions/css/custom.css
@@ -12,5 +12,30 @@
 }
 
 .full-height {
+    position: fixed;
+    width: 100%;
     height: 100%;
+}
+
+.container-player>.circle {
+    width: 150px;
+    height: 150px;
+    background-image: url("./../ico/circle.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: center;
+}
+
+.container-player>.circle>.btn-play {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 15px;
+    right: 0;
+    margin: auto;
+    width: 60px;
+    height: 60px;
+    background-image: url("./../ico/play_green.png");
+    background-size: contain;
+    background-repeat: no-repeat;
 }
