--- a/Maquette/GoTrain/Extensions/css/custom.css
+++ b/Maquette/GoTrain/Extensions/css/custom.css
@@ -1,7 +1,23 @@
+* {
+    color: aliceblue;
+}
+
 .screen-iphone8 {
     width: 1080px;
     height: 1920px;
 }
+
+.full-height {
+    height: 100vh;
+}
+
+
+/* .main {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    height: 100%;
+} */
 
 .bg-dark {
     background-color: #2c3e50 !important;
@@ -9,12 +25,6 @@
 
 .bg-second {
     background-color: #34495e;
-}
-
-.full-height {
-    position: fixed;
-    width: 100%;
-    height: 100%;
 }
 
 .container-player>.circle {
@@ -60,4 +70,24 @@
     background-image: url("./../ico/nav_right.png");
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+.bar {
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 20px;
+    background-color: rgb(16, 80, 80);
+}
+
+.subtitle {
+    color: silver;
+    font-size: 0.7em;
+}
+
+.font-link {
+    text-decoration: underline;
+    text-align: center;
+    font-size: 0.7em;
 }
